# ChangeLog for media-libs/freetype
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.160 2007/10/15 11:04:04 aballier Exp $

  15 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  freetype-1.3.1-r5.ebuild:
  virtual/tetex -> virtual/latex-base, bug #195894

*freetype-2.3.5-r2 (04 Oct 2007)

  04 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> metadata.xml,
  +freetype-2.3.5-r2.ebuild:
  - made ft2demos optional with utils USE flag (Bug #182905 by kerzol)
  - always use system zlib
  - remove ancient RDEPEND blockers

  01 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> -freetype-1.3.1-r4.ebuild,
  -freetype-2.3.5.ebuild:
  Remove old.

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> freetype-1.3.1-r5.ebuild:
  Stable on mips, per #166265.

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org>
  -files/digest-freetype-2.1.9-r1:
  remove stray digest file for freetype-2.1.9-r1.

  09 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> -freetype-2.1.9-r1.ebuild:
  Remove old.  Bug #172907.

*freetype-2.3.5-r1 (24 Aug 2007)

  24 Aug 2007; Ryan Hill <dirtyepic@gentoo.org> +freetype-2.3.5-r1.ebuild:
  Re-add -fno-strict-aliasing workaround for gnustep as reported by truedfx.

  11 Aug 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/freetype-2.3.5-crossbuild.patch, freetype-2.3.4-r2.ebuild,
  freetype-2.3.5.ebuild:
  Fix configure typo stripping -gcc from compiler name on cross-compiles. Bug
  #185681, Eddy Petrisor.

  15 Jul 2007; Ryan Hill <dirtyepic@gentoo.org> freetype-2.3.5.ebuild:
  Remove -fno-strict-aliasing as it is no longer necessary. (Red Hat bug #118021)

  11 Jul 2007; Roy Marples <uberlord@gentoo.org> freetype-2.3.5.ebuild:
  Keyworded ~sparc-fbsd

  07 Jul 2007; Ryan Hill <dirtyepic@gentoo.org> freetype-2.3.5.ebuild:
  Add warning to the user to rebuild libXfont after emerging freetype-2.3.5.

*freetype-2.3.5 (04 Jul 2007)
