@@ -25,12 +25,12 @@ DIST ft2demos-2.3.3.tar.gz 196955 RMD160 a2e2c11f53fd4f929eee8966d7541974f5a1eb5
 DIST ft2demos-2.3.4.tar.gz 201627 RMD160 48909351943e1bb45df5916c1afecfc84e0b83cb SHA1 e23f4722a5882a1e02a4d33de904d97648f20167 SHA256 4752254b67131797993b4eecf90f3228cd04e0e9e439710a8788c79044a02125
 DIST ft2demos-2.3.5.tar.bz2 157557 RMD160 7620d829a86d4125bc08d949cee13f8c383f6d88 SHA1 c528287137b534c38d0c2b94d3e76e6f9e8ff915 SHA256 f86d0d2906a2520d70460336002d20346c5013a973f3cedd049246715cef8e9f
 DIST ft2demos-2.3.5.tar.gz 203020 RMD160 cf469582ea42ec9886e1482ffbe32a17e5aa974f SHA1 7bc7739fda853edd1d8ed85052ddc433aac8e703 SHA256 219d40fd0c9340a4519b7cc317eca8efa92d9751b7e2c6b5243b91c3e72604ce
-EBUILD freetype-1.3.1-r5.ebuild 3470 RMD160 d08b0c4aa9c97796d7d4da61e7a001ff7c0c9296 SHA1 c3e9d0afc24189a2e4be4bec13e0e229e1902385 SHA256 31de8cb55c3f3370c29622285245976772b67b7eeaa8036ae28bcad123502fb7
+EBUILD freetype-1.3.1-r5.ebuild 3577 RMD160 eb54c358635e8bf3c10e3437cfaafff5e825d6df SHA1 24fe530a37ff078e37deaf2cb7855b8f44fa6e12 SHA256 3f9ed3f95360ddee05ba165d4b90c68c2895d06179e2c314bf61271f35410355
 EBUILD freetype-2.1.10-r2.ebuild 2213 RMD160 5c01cf6824eb592e8d5d1182cd80f167dc31ff55 SHA1 c6fd5a9962f5ab9249539bc80f517afab3f3413d SHA256 a3d549e4be790b6ed4e2bc3b7fd0fbc71c7c0a5c95f519884ad3bca623e53aa0
 EBUILD freetype-2.1.10-r3.ebuild 2298 RMD160 33dc56a6e7d614d50bc974975bcad2a5792db019 SHA1 6d1c9064aa55f85800ff9ccaed57c2593f073436 SHA256 aaaaca76a7acd444574cf5714081e7e29042ee1ad1f2c5a6b7c5dc0b70eb6e22
 EBUILD freetype-2.3.3.ebuild 3418 RMD160 a7eb4bb3988534ce229ff261cec9cc6ec7497fba SHA1 af7c91270a139b5956e18c70a644ca1ebbf0c58a SHA256 a0787d5faf6986da68d2f814c9a7139387805ee4282b632b2b6b2d22bdf70f3f
 EBUILD freetype-2.3.4-r2.ebuild 3420 RMD160 3dfcaeec1c3428222f79f371762cf1225b2f3577 SHA1 155551132ff6ca20abef636e257badde6a02ecb1 SHA256 19c06eeaf84567b18e53138f96f021bd90e1e0cc2fe13a22794d2400b5029e59
 EBUILD freetype-2.3.5-r1.ebuild 3428 RMD160 8929e0a41072a24cf14e236b41897dfca31aed76 SHA1 21885816023d1cdbd13492bbef1827c939025d3d SHA256 80dc7aae3940bbe1ec3437a743206cc4168b2eba3d6e6920b5eeb44a9ff78092
 EBUILD freetype-2.3.5-r2.ebuild 3263 RMD160 fcef2e1b30db1258676c689114a3de64d641a03a SHA1 e944a85feaaabf25a0020ec8f335642c7b49d8c2 SHA256 49467e75b01cfbc2a8bd90e0d977e4f7412ee176893abc79ae153744261b5a11
-MISC ChangeLog 24257 RMD160 74de26a7ab998e8169606e1b64b9dcae8da1f5f0 SHA1 cdeaae3c647d473e57f12fefbc04efce4d6c1ee0 SHA256 b3e8baf944e58de2ce336d68d8b6b42917735e9357a87870e15cb2ca42b90b3d
+MISC ChangeLog 24565 RMD160 46ad855bf249630118ede28e3b2f6e38d378496f SHA1 fed1cc35e6702715247bfe6eb76daafa15937da8 SHA256 364aa54ea9ba592881c9d37a99622689d19a260ce951b59151fcd684101edeaf
 MISC metadata.xml 159 RMD160 e9d6dae6266cd59331aaa78481fd5a67fc2ed725 SHA1 152e7ea08489d788f3f1c4c59be552a5f94b2d02 SHA256 952d89bc3335f3d2f69460945016b173913db58759fe7d906f3927909120c890
